@@ -104,7 +104,7 @@ public class TestTieredMergePolicy extends BaseMergePolicyTestCase {
 
     // below we make the assumption that segments that reached the max segment
     // size divided by 2 don't need merging anymore
-    int mergeFactor = (int) Math.min(tmp.getSegmentsPerTier(), tmp.getMaxMergeAtOnce());
+    int mergeFactor = (int) tmp.getSegmentsPerTier();
     while (true) {
       final double segCountLevel = bytesLeft / (double) levelSizeBytes;
       if (segCountLevel <= tmp.getSegmentsPerTier()
@@ -145,12 +145,11 @@ public class TestTieredMergePolicy extends BaseMergePolicyTestCase {
     assertTrue(
         String.format(
             Locale.ROOT,
-            "mergeFactor=%d minSegmentBytes=%,d maxMergedSegmentBytes=%,d segmentsPerTier=%g maxMergeAtOnce=%d numSegments=%d allowed=%g totalBytes=%,d delPercentage=%g deletesPctAllowed=%g targetNumSegments=%d",
+            "mergeFactor=%d minSegmentBytes=%,d maxMergedSegmentBytes=%,d segmentsPerTier=%g numSegments=%d allowed=%g totalBytes=%,d delPercentage=%g deletesPctAllowed=%g targetNumSegments=%d",
             mergeFactor,
             minSegmentBytes,
             maxMergedSegmentBytes,
             tmp.getSegmentsPerTier(),
-            tmp.getMaxMergeAtOnce(),
             numSegments,
             allowedSegCount,
             totalBytes,
@@ -162,10 +161,7 @@ public class TestTieredMergePolicy extends BaseMergePolicyTestCase {
 
   @Override
   protected void assertMerge(MergePolicy policy, MergeSpecification merges) {
-    TieredMergePolicy tmp = (TieredMergePolicy) policy;
-    for (OneMerge merge : merges.merges) {
-      assertTrue(merge.segments.size() <= tmp.getMaxMergeAtOnce());
-    }
+    // anything to assert?
   }
 
   public void testForceMergeDeletes() throws Exception {
@@ -174,7 +170,6 @@ public class TestTieredMergePolicy extends BaseMergePolicyTestCase {
     TieredMergePolicy tmp = newTieredMergePolicy();
     conf.setMergePolicy(tmp);
     conf.setMaxBufferedDocs(4);
-    tmp.setMaxMergeAtOnce(100);
     tmp.setSegmentsPerTier(100);
     tmp.setDeletesPctAllowed(50.0);
     tmp.setForceMergeDeletesPctAllowed(30.0);
@@ -219,8 +214,8 @@ public class TestTieredMergePolicy extends BaseMergePolicyTestCase {
       TieredMergePolicy tmp = newTieredMergePolicy();
       conf.setMergePolicy(tmp);
       conf.setMaxBufferedDocs(2);
-      tmp.setMaxMergeAtOnce(3);
       tmp.setSegmentsPerTier(6);
+      tmp.setFloorSegmentMB(Double.MIN_VALUE);
 
       IndexWriter w = new IndexWriter(dir, conf);
       int maxCount = 0;
@@ -231,7 +226,7 @@ public class TestTieredMergePolicy extends BaseMergePolicyTestCase {
         w.addDocument(doc);
         int count = w.getSegmentCount();
         maxCount = Math.max(count, maxCount);
-        assertTrue("count=" + count + " maxCount=" + maxCount, count >= maxCount - 3);
+        assertTrue("count=" + count + " maxCount=" + maxCount, count >= maxCount - 6);
       }
 
       w.flush(true, true);
@@ -973,15 +968,13 @@ public class TestTieredMergePolicy extends BaseMergePolicyTestCase {
       assertEquals(15, oneMerge.segments.size());
     }
 
-    // Segments are below the floor segment size and we'd need to merge more than maxMergeAtOnce
-    // segments to go above the minimum segment size. We get 1 merge of maxMergeAtOnce=30 segments
-    // and 1 merge of 50-30=20 segments.
+    // Segments are below the floor segment size. We get one merge that merges the 50 segments
+    // together.
     mergePolicy.setFloorSegmentMB(60);
     mergeSpec = mergePolicy.findMerges(MergeTrigger.FULL_FLUSH, infos, mergeContext);
     assertNotNull(mergeSpec);
-    assertEquals(2, mergeSpec.merges.size());
-    assertEquals(30, mergeSpec.merges.get(0).segments.size());
-    assertEquals(20, mergeSpec.merges.get(1).segments.size());
+    assertEquals(1, mergeSpec.merges.size());
+    assertEquals(50, mergeSpec.merges.get(0).segments.size());
   }
 
   public void testFullFlushMerges() throws IOException {
@@ -1008,6 +1001,6 @@ public class TestTieredMergePolicy extends BaseMergePolicyTestCase {
       segmentInfos =
           applyMerge(segmentInfos, merge, "_" + segNameGenerator.getAndIncrement(), stats);
     }
-    assertEquals(2, segmentInfos.size());
+    assertEquals(1, segmentInfos.size());
   }
 }
